[tool.poetry]
name = "ai-article-generator-bedrock-langgraph-reflection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.24"
langchain-aws = "^0.2.9"
langgraph = "^0.2.58"
streamlit = "^1.41.0"
langchain = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
